# VUI

./: .gitignore  COPYING  README.md  install.sh  io.github.pedromigueldev.vui.json  meson.build  meson.options  meson.options.txt  run.sh
data/: io.github.pedromigueldev.vui.desktop.in  io.github.pedromigueldev.vui.gschema.xml  io.github.pedromigueldev.vui.metainfo.xml.in  meson.build
data/icons/: meson.build
demo/: application.vala  demo.gresource.xml  main.vala  meson.build  window.vala
po/: POTFILES  meson.build
src/: Init.vala  application.vala  main.vala  meson.build  vui.gresource.xml  window.ui  window.vala
src/Adwaita/Implementation/: Callbacks.vala  Impl.vala  WidgetGeneric.vala
src/Adwaita/Model/: Store.vala
src/Adwaita/Widgets/: AlertDialog.vala  App.vala  Application.vala  Bin.vala  Box.vala  Button.vala  Dialog.vala  Entry.vala  HeaderBar.vala  Image.vala  Label.vala  MenuButton.vala  Navigation.vala  Overlay.vala  Page.vala  ScrolledBox.vala  Spacer.vala  Toolbar.vala  Window.vala
src/Icons/: icons.gresource.xml  meson.build
src/Implementation/: Flow.vala  Impl.vala
src/Model/: Store.vala
src/Styles/: vui.css
src/Widgets/: AlertDialog.vala  Box.vala  Button.vala  Dialog.vala  Entry.vala  HeaderBar.vala  Image.vala  Label.vala  MenuButton.vala  Navigation.vala  Overlay.vala  Page.vala  ScrolledBox.vala  Spacer.vala  Toolbar.vala  Window.vala
src/demo/: application.vala  demo.gresource.xml  main.vala  window.vala
